# scientist-globe

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
src/scientist_globe/: app.py  cli.py
src/scientist_globe/static/: README.md  index.html
src/scientist_globe/static/css/: style.css
src/scientist_globe/static/js/: data.js  globe.js  main.js
