[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scientist-globe"
version = "0.1.0"
description = "全球计算机科学家 3D 互动地球仪 - 赛博科技风"
readme = "README.md"
requires-python = ">=3.10.19"
authors = [{name = "Ricardo", email = "13838152117@139.com"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2"
]
license = {text = "MIT"}
# 项目链接
urls = {
    "Homepage" = "https://github.com/Ricardo-shuo-liu/scientist-globe",
    "Bug Tracker" = "https://github.com/Ricardo-shuo-liu/scientist-globe/issues"
}

[project.optional-dependencies]
dev = [  
    "build>=1.0.3",
    "twine>=4.0.2"
]

[project.scripts]
scientist-globe = "scientist_globe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scientist_globe" = ["static/**/*"]
